<resources>
    <string name="app_name">SysBar</string>

    <!-- ERROR CODES-->
    <string name="error_generic">Ooops! Algo salio mal</string>
    <string name="error_user_code_invalid">Usuario no valido</string>

    <!-- SYSTEM -->
    <string name="system_accept">Aceptar</string>
    <string name="system_cancel">Cancelar</string>
    <string name="system_confirm">Confirmar</string>


    <!-- SIDE MENU -->
    <string name="menu_side_home">Inicio</string>
    <string name="menu_side_users">Usuarios</string>
    <string name="menu_side_close">Cerrar Menu</string>
    <string name="menu_side_open">Abrir Menu</string>
    <string name="menu_side_logout">Salir</string>
    <string name="menu_side_reset_pass">Cambiar Password</string>

    <!-- ACCESS -->
    <string name="access_code">Codigo</string>
    <string name="access_access">Acceder</string>

    <!-- HOME -->
    <string name="home_tables">Mesas</string>
    <string name="home_orders">Ordenes</string>
    <string name="home_kitchen">Cocina</string>
    <string name="home_bar">Barra</string>
    <string name="home_active_user">Usuario: %1$s</string>

    <!-- TABLE -->
    <string name="table_personal">Personal</string>

    <!-- ORDER -->
    <string name="order_button_print_ticket">Imprimir Ticket</string>
    <string name="order_button_change">Cambiar Mesa</string>
    <string name="order_summary_subtotal">Total:</string>
    <string name="order_input_comment">Comentarios</string>
    <string name="order_search_filter">Filtrar</string>
    <string name="order_search_radio_all">Todo</string>
    <string name="order_search_radio_drink">Bebidas</string>
    <string name="order_search_radio_food">Comida</string>
    <string name="order_type_delivery">A Domicilio</string>
    <string name="order_type_personal">Personal</string>

    <!-- PROCESS ORDER -->
    <string name="process_order_details">Detalles de Orden</string>
    <string name="process_order_details_waiter">Mesero:</string>
    <string name="process_order_details_customer_name">Cliente:</string>
    <string name="process_order_details_customer_phone">Telefono:</string>
    <string name="process_order_details_button_finish">Terminar</string>


    <!-- MOCK -->
    <string name="mock_text_number">1</string>
    <string name="mock_text_price">$100.00</string>
    <string name="mock_text_short">Short</string>
    <string name="mock_text_medium">Medium Text</string>
    <string name="mock_text_long">Long text for internal testing</string>
    <string name="mock_text_extra_long">Very Long long text for internal testing and validate other fields</string>

</resources>