<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

   <com.lcmm.sysbar.android.components.CustomView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="5dp"
       app:isRound="false"
       app:borderColor="@color/gray_3"
       app:color="@color/gray_1">
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/search_container"
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           app:endIconMode="clear_text"
           app:endIconTint="@color/warning">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/filterEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/order_search_filter"
               android:textSize="16sp"
               android:padding="10dp"
               android:imeOptions="actionSearch"
               android:inputType="textPersonName" />
       </com.google.android.material.textfield.TextInputLayout>

       <RadioGroup
           android:id="@+id/filterRadioGroup"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_weight="1">
           <RadioButton
               android:id="@+id/allRadioButton"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_marginEnd="10dp"
               android:checked="true"
               android:text="@string/order_search_radio_all"/>
           <RadioButton
               android:id="@+id/foodRadioButton"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_marginEnd="10dp"
               android:text="@string/order_search_radio_food"/>
           <RadioButton
               android:id="@+id/drinkRadioButton"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/order_search_radio_drink"/>
       </RadioGroup>
   </com.lcmm.sysbar.android.components.CustomView>

    <com.lcmm.sysbar.android.components.CustomView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        app:isRound="false"
        app:borderColor="@color/gray_3">
        <!-- RecyclerView with FlexboxLayoutManager -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.lcmm.sysbar.android.components.CustomView>

</androidx.appcompat.widget.LinearLayoutCompat>