<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#33000005"
    android:gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@drawable/container_popup"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="end"
            android:layout_marginBottom="30dp"
            android:background="@drawable/icon_close"
            android:backgroundTint="@color/error"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/productText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/mock_text_medium"
            android:textSize="20sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/subtractButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:background="@drawable/icon_minus"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/quantityText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/mock_text_number"
                android:textSize="36sp" />

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_add"
                android:importantForAccessibility="no" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentInput"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="top|start"
            android:hint="@string/order_input_comment"
            android:inputType="textMultiLine"
            android:padding="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"/>
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/warning"
                android:gravity="center"
                android:text="@string/system_cancel" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:backgroundTint="@color/success"
                android:text="@string/system_confirm" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>
