<com.lcmm.sysbar.android.components.CustomView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="10dp"
    app:isRound="false"
    app:borderColor="@color/gray_2">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/quantityText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/mock_text_number"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/success"/>
            <TextView
                android:id="@+id/productText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toStartOf="@+id/finishButton"
                app:layout_constraintStart_toEndOf="@+id/quantityText"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/mock_text_long"
                android:textSize="20sp" />
           <com.google.android.material.button.MaterialButton
               android:id="@+id/finishButton"
               style="@style/OutlinedButtonSuccess"
               android:layout_width="120dp"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:textSize="18sp"
               android:text="@string/process_order_details_button_finish"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/commentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="100dp"
            android:textSize="20sp"
            android:textColor="@color/gray_3"
            android:text="@string/mock_text_long" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.lcmm.sysbar.android.components.CustomView>