<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    tools:context=".fragments.OrderProcessFragment">

    <com.lcmm.sysbar.android.components.CustomView
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:isRound="false"
        android:layout_margin="5dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_5"
            android:text="@string/home_orders"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/preparationQueueSummaryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.lcmm.sysbar.android.components.CustomView>
    <com.lcmm.sysbar.android.components.CustomView
        android:id="@+id/preparationQueueDetailsContainer"
        android:layout_width="0px"
        android:layout_height="match_parent"
        app:isRound="false"
        android:layout_weight="3"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/gray_5"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/destinationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/mock_text_short"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/process_order_details_waiter"/>
                <TextView
                    android:id="@+id/waiterText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/mock_text_short"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/customerInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/gray_5"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/process_order_details_customer_name"/>
                <TextView
                    android:id="@+id/customerNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/mock_text_short"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/process_order_details_customer_phone"/>
                <TextView
                    android:id="@+id/customerPhoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/mock_text_short"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/preparationQueueList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.lcmm.sysbar.android.components.CustomView>

</LinearLayout>