<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/reviewsGrid"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.lcmm.sysbar.android.components.CustomView
            android:id="@+id/tablesItem"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/container_round"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/table_icon"
                    app:tint="@color/primary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_tables"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>
        </com.lcmm.sysbar.android.components.CustomView>
        <com.lcmm.sysbar.android.components.CustomView
            android:id="@+id/ordersItem"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/container_round"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/order_icon"
                    app:tint="@color/primary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_orders"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>
        </com.lcmm.sysbar.android.components.CustomView>
        <com.lcmm.sysbar.android.components.CustomView
            android:id="@+id/kitchenItem"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/container_round"
            android:layout_marginEnd="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/food_icon"
                    app:tint="@color/primary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_kitchen"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>
        </com.lcmm.sysbar.android.components.CustomView>
        <com.lcmm.sysbar.android.components.CustomView
            android:id="@+id/barItem"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/container_round"
            android:layout_marginEnd="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/drink_icon"
                    app:tint="@color/primary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_bar"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>
        </com.lcmm.sysbar.android.components.CustomView>
    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>